# vfs

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindHashMap.cmake  VFSConfig.cmake.in
include/: vfs.h
include/vfs/: file.h  source.h  vfs.h
include/vfs/sources/: memory.h  prefixed.h
src/: file.c  source.c  vfs.c
src/sources/: memory.c  prefixed.c
